fixed svg sizing removed width and height from inline svg. added gap to stylesheet

--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ p {
 .section-logos {
     display: flex;
     justify-content: space-between;
-    margin: 2rem 0 3rem 0;
+    margin: 2rem 0rem 3rem;
     align-items: center;
+    gap: 1.5rem;
 }
